fix the fact that the github logo overlaps the link text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,7 +139,7 @@ body #page-top > div #github div span {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
   position: relative;
   top: 10px;
-  right: -30px;
+  right: -10px;
   background: white;
   padding: 10px 4px;
   border-radius: 2px;
